--- a/Imersão Dev/Aula-03/style.css
+++ b/Imersão Dev/Aula-03/style.css
@@ -42,8 +42,9 @@ body {
   }
 
   .text-box{
-    width: 350px;
-    height: 30px;
+    width: 400px;
+    height: 40px;
     background-color: white;
-    margin: 0 auto;
+    margin: 1rem auto;
+    padding: 0.5rem 0.5rem 0;
   }
