--- a/ImersãoDev/Aula-01/style.css
+++ b/ImersãoDev/Aula-01/style.css
@@ -43,12 +43,29 @@ body {
     background-size: 100%;
   }
   
-  #value-input{
+  #input-moeda, #input-temp{
     width: 200px;
-    height: 20px;
+    height: 25px;
+    text-align: center;
+  }
+
+  button{
+    width: 100px;
+    height: 35px;
+    background-color: rgb(230, 1, 1);
+    color: #fff;
+    font-weight: bold;
+    padding: none;
+    border: 10px;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: 0.5s;
+    margin: 1em 0;
   }
   
   .text-conversor{
+    font-size: 20px;
+    font-weight: bold;
     color: #FFF;
     display: inline;
   }
