--- a/ImersãoDev/Aula-10/style.css
+++ b/ImersãoDev/Aula-10/style.css
@@ -1,6 +1,10 @@
 :root{
     --background: #7ebced;
     --background-insignias: #9cd2ff;
+	--sub-title: #033161;
+	--card-color: #fff;
+
+	--gradient-header: linear-gradient(#7ebced, #b8dfff)
 }
 
 body{
@@ -8,38 +12,17 @@ body{
 	font-family: 'Open Sans', sans-serif;
 }
 
-section{
+.container{
 	-webkit-box-shadow: 5px 5px 50px 8px rgba(0,0,0,0.59);
 	box-shadow: 5px 5px 50px 8px rgba(0,0,0,0.59);
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
 	margin-top: 100px;
-	background-color: #fff;
+	background-color: var(--card-color);
 	padding: 15px;
 	max-width: 500px;
 	border-radius: 5px;
-}
-
-section h1{
-	font-size: 40px;
-	text-align: center;
-    font-weight: bold;
-}
-
-header{
-	background-image: linear-gradient(#7ebced, #b8dfff);
-	background-size: cover;
-	height: 80px;
-	border-radius: 5px;
-}
-
-div {
-	padding: 15px;
-	background-color: var(--background-insignias);
-	border-radius: 5px;
-    border: 1px solid var(--background-insignias);
-    margin-top: 65px;
 }
 
 .foto{
@@ -52,31 +35,52 @@ div {
 	border: 5px solid white;
 }
 
-h2{
-    text-align: center;
-    color: #033161;
+
+header{
+	background-image: var(--gradient-header);
+	background-size: cover;
+	height: 80px;
+	border-radius: 5px;
 }
 
-p{
-    text-align: center;
-    font-size: 16px;
+.title{
+	font-size: 40px;
+	text-align: center;
+	font-weight: bold;
+}
+
+.text-short{
+	text-align: center;
+	font-size: 16px;
 }
 
 .alura{
     color: blue;
 }
 
-a{
+.container-insignias {
+	padding: 15px;
+	background-color: var(--background-insignias);
+	border-radius: 5px;
+    margin-top: 65px;
+}
+
+.sub-title{
+	text-align: center;
+	color: var(--sub-title);
+}
+
+.codepen-project{
     text-decoration: none;
     color: white;
 }
 
-a:hover{
+.codepen-project:hover{
     color: #2c6a9b;
     transition: 0.5s;
 }
 
-.github{
-    display: block;
-    margin: 5px auto 0;
+.conatiner-rede-social{
+	margin: 10px 0 -10px 35%;
 }
+
